Fixed small screen overflow

--- a/assets/css/1-base/general.sass
+++ b/assets/css/1-base/general.sass
@@ -14,6 +14,7 @@ body
 html
   font: normal 16px sans-serif
   color: #555
+  overflow-x: hidden
 
 ul, nav
   list-style: none
