--- a/assets/css/2-modules/hover-tile.scss
+++ b/assets/css/2-modules/hover-tile.scss
@@ -53,3 +53,13 @@
   }
 
 }
+
+@media (max-width: 400px) {
+    .hover-tile-hidden {
+        p {
+            font-size: 0.9em;
+        }
+
+    
+    }
+}
