--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -49,6 +49,12 @@ header
     img
       width: 95%
 
+@media (max-width: 400px)
+  nav
+    li
+      font-size: 0.8em
+      margin: 5px 5px
+
 /*----------------
  * 	Hero Section
  *----------------
@@ -57,6 +63,7 @@ header
   position: relative
   +flex-direction(row)
   +justify-content(flex-start)
+  overflow-x: hidden !important
   height: 100vh
   color: $white
   padding: 125px 150px
@@ -179,6 +186,7 @@ img#roboarm
   .our-work .grid li
     &.small, &.large
       flex-basis: 100%
+
 
 /*----------------------
  * 	Features Section
